--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/foundation/css/foundation.css" />
+    <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -24,11 +25,11 @@
     </div>
 
     <!-- Add your site or application content here -->
-    <div class="off-canvas-wrap" data-offcanvas data-ng-hide="isSpecificPage()" data-ng-cloak>
+    <div class="off-canvas-wrap" ng-hide="isSpecificPage()" ng-cloak>
       <div class="inner-wrap">
         <nav class="tab-bar">
           <section class="left-small">
-            <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+            <a class="left-off-canvas-toggle menu-icon"><span></span></a>
           </section>
 
           <section class="middle tab-bar-section">
@@ -36,7 +37,7 @@
           </section>
 
           <section class="right-small">
-            <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
+            <a class="right-off-canvas-toggle menu-icon"><span></span></a>
           </section>
         </nav>
 
@@ -44,7 +45,7 @@
           <ul class="off-canvas-list">
             <li><label>点快</label></li>
             <li><a href="#">营业大厅</a></li>
-            <li><a href="#">餐桌管理</a></li>
+            <li><a ui-sref="table">餐桌管理</a></li>
             <li><a href="#">餐厅配置</a></li>
           </ul>
         </aside>
@@ -58,7 +59,10 @@
         </aside>
 
         <section class="main-section" style="min-height: 600px;">
-          <div ui-view=""></div>
+          <div class="row">
+              <div class="large-12 columns" ui-view>
+              </div>
+          </div>
         </section>
 
       <a class="exit-off-canvas"></a>
@@ -67,15 +71,15 @@
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     <!--<script>-->
+       <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+       <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+       <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+       <!--})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+       <!--ga('create', 'UA-XXXXX-X');-->
+       <!--ga('send', 'pageview');-->
+    <!--</script>-->
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -110,6 +114,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/overview.js"></script>
+    <script src="scripts/controllers/table.js"></script>
     <!-- endbuild -->
 
     <script>
