check for input && table update function

--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
     <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <!-- endbower -->
     <script src="scripts/config.js"></script>
     <!-- endbuild -->
