qiniu api, but some bugs

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
             <li><label>点快</label></li>
             <li><a ui-sref="overview">营业大厅</a></li>
             <li><a ui-sref="table">餐桌管理</a></li>
-            <li><a href="#">餐厅配置</a></li>
+            <li><a ui-sref="restaurant">餐厅配置</a></li>
             <li><a ui-sref="registration">取号主页</a></li>
           </ul>
         </aside>
@@ -121,6 +121,7 @@
     <script src="scripts/controllers/overview.js"></script>
     <script src="scripts/controllers/table.js"></script>
     <script src="scripts/controllers/registration.js"></script>
+    <script src="scripts/controllers/restaurant.js"></script>
     <!-- endbuild -->
 
     <script>
