fix upload file to qiniu

--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,8 @@
     <script src="scripts/controllers/table.js"></script>
     <script src="scripts/controllers/registration.js"></script>
     <script src="scripts/controllers/restaurant.js"></script>
+    <script src="scripts/directives/fileupload.js"></script>
+    <script src="scripts/services/fileupload.js"></script>
     <!-- endbuild -->
 
     <script>
