function change on registration

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
           <ul class="off-canvas-list">
             <li><label>点快</label></li>
             <li><a ui-sref="overview">营业大厅</a></li>
-            <li><a ui-sref="table">餐桌管理</a></li>
+            <li><a ui-sref="table">餐桌类型管理</a></li>
             <li><a ui-sref="restaurant">餐厅配置</a></li>
             <li><a ui-sref="registration">取号主页</a></li>
           </ul>
