--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/controllers/console.table.js"></script>
     <script src="scripts/controllers/console.restaurant.js"></script>
     <script src="scripts/controllers/console.change_passwd.js"></script>
+    <script src="scripts/controllers/console.report.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/services/fileupload.js"></script>
     <!-- endbuild -->
