--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+    <script src="bower_components/echarts/build/dist/echarts.js"></script>
     <!-- endbower -->
     <script src="scripts/config.js"></script>
     <!-- endbuild -->
@@ -78,6 +79,7 @@
     <script src="scripts/controllers/console.restaurant.js"></script>
     <script src="scripts/controllers/console.change_passwd.js"></script>
     <script src="scripts/controllers/console.report.js"></script>
+    <script src="scripts/controllers/console.history.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/services/fileupload.js"></script>
     <!-- endbuild -->
