--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="scripts/controllers/console.history.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/services/fileupload.js"></script>
+    <script src="scripts/services/defaultdata.js"></script>
     <!-- endbuild -->
 
   </body>
