--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,10 @@
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <link rel="apple-touch-icon" href="images/orange70.png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
+    <!-- build:css(.tmp) styles/app.css -->
     <link rel="stylesheet" href="styles/app.css" />
+    <!-- endbuild -->
+    <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css" />
     <!-- endbower -->
@@ -66,10 +68,10 @@
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/echarts/build/dist/echarts.js"></script>
     <!-- endbower -->
-    <script src="scripts/config.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/config.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/controllers/registration.js"></script>
