--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <link rel="apple-touch-icon" href="images/orange70.png" />
+    <link rel="apple-touch-icon" href="images/apple_touch_icon.png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <link rel="stylesheet" href="styles/app.css" />
