beautify login page

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" ng-app="dianApp">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>点快</title>
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
