add seed user request page

--- a/app/homepage/index.html
+++ b/app/homepage/index.html
@@ -18,8 +18,9 @@
     <div class="content_top">
       <a href="http://www.diankuai.cn/" class="logo">点快</a>
       <p class="menus">
+      <a href="./register.html">免费开通</a>
       <a href="http://c.diankuai.cn/" target="_blank">控制台</a>
-      <a href="http://www.diankuai.cn/" class="menu_current">首页</a>
+      <a href="#" class="menu_current">首页</a>
       </p>
     </div>
   </div>
@@ -125,7 +126,9 @@
       </div>
     </div>
   </div>
-</div>		<div class="footer_on">
+</div>
+
+<div class="footer_on">
   <div class="footer">
     <div class="footer_links">
       <ol>
@@ -180,6 +183,7 @@
     <p class="copyright">
     京ICP备15011685号
     </p>
+    <p class="theme-by">theme by <a href="http://www.miui.com/overview.php">miui</a></p>
   </div>
 
 </div>
