change with deploy content

--- a/app/homepage/register.html
+++ b/app/homepage/register.html
@@ -36,7 +36,7 @@
       <div class="part part_0 register-part">
         <h3 class="part_title first_title">
           设备与软件，完全免费<br>
-          让餐厅真正零成本使用
+          让餐厅真正<span style="color:#ff7700;">零成本</span>使用
         </h3>
         <form action="" id="seed_user_form" class="register-form">
           <h4 style="text-align:center;">请填写开通申请（目前仅对<span style="color: #FF7700;">北京地区</span>餐厅开放）</h4>
