--- a/app/homepage/index.html
+++ b/app/homepage/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="点快,diankuai,餐厅,餐饮,取号,排队,等位,预订,订位,订座,自助,微信,智能,智慧">
 <meta name="description" content="点快是一款基于互联网的餐饮智能化产品，在餐厅需要排队等位就餐时，提供基于手机或微信的自助取号功能">
-<title>点快 - 不仅是餐厅排队取号，而是智能餐饮的未来</title>
+<title>点快 - 不是简单的餐厅排队取号，而是智能餐饮的未来</title>
 <link rel="stylesheet" href="./feature_files/reset.css">
 <link rel="stylesheet" href="./feature_files/common.css">
 <link rel="stylesheet" href="./feature_files/function.css">
