--- a/app/homepage/price.html
+++ b/app/homepage/price.html
@@ -27,7 +27,7 @@
   </div>
   <div class="menu_links_on">
     <div class="menu_links">
-      <a href="#" class="menu_links_current">免费版</a><a href="./price.html">收费版</a>
+      <a href="./register.html">免费版</a><a href="./price.html" class="menu_links_current">收费版</a>
     </div>
   </div>
   <div class="content_0_on">
@@ -35,37 +35,34 @@
 
       <div class="part part_0 register-part">
         <h3 class="part_title first_title">
-          设备与软件，完全免费<br>
-          让餐厅真正<span style="color:#ff7700;">零成本</span>使用
+          仅需每月多留住一个顾客...
         </h3>
-        <form action="" id="seed_user_form" class="register-form">
-          <h4 style="text-align:center;">请填写开通申请（目前仅对<span style="color: #FF7700;">北京地区</span>餐厅开放）</h4>
-          <div class="input-field">
-            <label for="title">餐厅名称</label>
-            <input type="" name="title">
-          </div>
-          <div class="input-field">
-            <label for="address">餐厅地址</label>
-            <input type="" name="address">
-          </div>
-          <div class="input-field">
-            <label for="name">联系人姓名</label>
-            <input type="" name="name">
-          </div>
-          <div class="input-field">
-            <label for="phone">联系人手机</label>
-            <input type="" name="phone">
-          </div>
-          
-          <div>
-            <button type="submit">提交申请</button>
-          </div>
-        </form>
-        <div style="text-align:center;margin-top:25px;color:#666;">
-          如需咨询，请随时联系我们
+        <div class="price-table">
+          <table>
+            <tr>
+              <th>免费版</th>
+              <th>收费版</th>
+            </tr>
+            <tr>
+              <td>短信取号 600 次/月</td>
+              <td>短信取号 3000 次/月</td>
+            </tr>
+            <tr>
+              <td>微信取号 1200 次/月</td>
+              <td>微信取号无限次</td>
+            </tr>
+            <tr>
+              <td>在线 / 电话<br>技术支持</td>
+              <td>在线 / 电话 / 服务专员上门<br>技术支持</td>
+            </tr>
+            <tr>
+              <td><span class="price-text">免费</span></td>
+              <td><span class="price-text">99 元/月</span></td>
+            </tr>
+          </table>
         </div>
-        <div style="text-align:center;margin-top:10px;color:#666;">
-          （QQ：3035731421，电话：13021045329）
+        <div style="text-align:center;margin-top:10px;color:#333;">
+          付费版开通，请直接联系我们（QQ：3035731421，电话：13021045329）
         </div>
       </div>
 
@@ -134,3 +131,4 @@
 <a class="to_top" href="#top" style="right: 10px; display: none;"></a>
 
 </body></html>
+              <td>ç√·</td>
