--- a/app/homepage/price.html
+++ b/app/homepage/price.html
@@ -27,7 +27,7 @@
   </div>
   <div class="menu_links_on">
     <div class="menu_links">
-      <a href="./register.html">免费版</a><a href="./price.html" class="menu_links_current">收费版</a>
+      <a href="./register.html">免费版</a><a href="./price.html" class="menu_links_current">付费版</a>
     </div>
   </div>
   <div class="content_0_on">
@@ -41,7 +41,7 @@
           <table>
             <tr>
               <th>免费版</th>
-              <th>收费版</th>
+              <th>付费版</th>
             </tr>
             <tr>
               <td>短信取号 600 次/月</td>
@@ -62,7 +62,10 @@
           </table>
         </div>
         <div style="text-align:center;margin-top:10px;color:#333;">
-          付费版开通，请直接联系我们（QQ：3035731421，电话：13021045329）
+          <span style="color:#f70">付费版</span>开通，请直接联系我们，由专员为您服务
+        </div>
+        <div style="text-align:center;margin-top:10px;color:#333;">
+          QQ：3035731421，电话：13021045329
         </div>
       </div>
 
