--- a/app/homepage/register.html
+++ b/app/homepage/register.html
@@ -27,7 +27,7 @@
   </div>
   <div class="menu_links_on">
     <div class="menu_links">
-      <a href="#" class="menu_links_current">免费版</a><a href="./price.html">收费版</a>
+      <a href="#" class="menu_links_current">免费版</a><a href="./price.html">付费版</a>
     </div>
   </div>
   <div class="content_0_on">
