--- a/app/homepage/price.html
+++ b/app/homepage/price.html
@@ -11,6 +11,18 @@
 <script src="./feature_files/jquery.1.7.1.min.js" type="text/javascript"></script>
 <script src="./feature_files/index.js" type="text/javascript"></script>
 <script src="./feature_files/register.js" type="text/javascript"></script>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61830111-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
@@ -131,5 +143,8 @@
   </div>
 
 </div>
+
+<!-- cnzz -->
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254773847'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1254773847%26show%3Dpic2' type='text/javascript'%3E%3C/script%3E"));</script>
 
 </body></html>
