--- a/app/homepage/index.html
+++ b/app/homepage/index.html
@@ -148,13 +148,13 @@
         <h4>帮助</h4>
         <dl>
           <dd>
-          <a href="#">文档中心</a>
+          <a href="#doc">文档中心</a>
           </dd>
           <dd>
-          <a href="#">问答社区</a>
+          <a href="#question">问答社区</a>
           </dd>
           <dd>
-          <a href="#">用户论坛</a>
+          <a href="#bbs">用户论坛</a>
           </dd>
         </dl>
         </li>
@@ -162,13 +162,13 @@
         <h4>团队</h4>
         <dl>
           <dd>
-          <a href="#">点快团队</a>
+          <a href="#team">点快团队</a>
           </dd>
           <dd>
-          <a href="#">加入我们</a>
+          <a href="#joinus">加入我们</a>
           </dd>
           <dd>
-          <a href="http://c.diankuai.cn/">联系我们</a>
+          <a href="#contact">联系我们</a>
           </dd>
         </dl>
         </li>
