--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,10 @@
     <script src="scripts/custom_libs/echarts/echarts-all.js"></script>
     <!-- endbuild -->
 
+    <div class="page-loading">
+      <img src="images/loading.gif" alt="loading">
+    </div>
+
 <!-- cnzz -->
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254773847'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1254773847%26show%3Dpic2' type='text/javascript'%3E%3C/script%3E"));</script>
 
