--- a/app/homepage/price.html
+++ b/app/homepage/price.html
@@ -23,6 +23,17 @@
   ga('send', 'pageview');
 
 </script>
+
+<!-- Baidu Tonji -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?7051a18e65d494957a70403bf966324f";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 
 <body>
