add contact & intro page

--- a/app/homepage/contact.html
+++ b/app/homepage/contact.html
@@ -37,47 +37,34 @@
       </p>
     </div>
   </div>
-  <div class="menu_links_on">
-    <div class="menu_links">
-      <a href="./register.html">免费版</a><a href="./price.html" class="menu_links_current">付费版</a>
-    </div>
-  </div>
   <div class="content_0_on">
     <div class="content_0">
 
       <div class="part part_0 register-part">
         <h3 class="part_title first_title">
-          仅需每月多留住一个顾客...
+          联系我们
         </h3>
-        <div class="price-table">
-          <table>
-            <tr>
-              <th>免费版</th>
-              <th>付费版</th>
-            </tr>
-            <tr>
-              <td>短信取号 600 次/月</td>
-              <td>短信取号 3000 次/月</td>
-            </tr>
-            <tr>
-              <td>微信取号 1200 次/月</td>
-              <td>微信取号无限次</td>
-            </tr>
-            <tr>
-              <td>在线 / 电话<br>技术支持</td>
-              <td>在线 / 电话 / 服务专员上门<br>技术支持</td>
-            </tr>
-            <tr>
-              <td><span class="price-text">免费</span></td>
-              <td><span class="price-text">99 元/月</span></td>
-            </tr>
-          </table>
-        </div>
-        <div style="text-align:center;margin-top:10px;color:#333;">
-          <span style="color:#f70">付费版</span>开通，请直接联系我们，由专员为您服务
-        </div>
-        <div style="text-align:center;margin-top:10px;color:#333;">
-          QQ：3035731421，电话：13021045329
+        <div style="text-align:left;margin-top:20px;color:#333;">
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            电子邮件：contactus@diankuai.cn
+          </h4>
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            业务咨询、市场合作：13021045329，010-87890682
+          </h4>
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            微信公众号：diankuai
+          </h4>
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            腾讯微博：
+            <a href="http://t.qq.com/diankuai2015">http://t.qq.com/diankuai2015</a>
+          </h4>
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            新浪微博：
+            <a href="http://weibo.com/diankuai">http://weibo.com/diankuai</a>
+          </h4>
+          <h4 style="width:400px;margin: 20px auto 0;color:#333;">
+            地址：北京市朝阳区西大望路甲12号国家广告产业园B座
+          </h4>
         </div>
       </div>
 
