--- a/app/homepage/index.html
+++ b/app/homepage/index.html
@@ -162,13 +162,13 @@
         <h4>团队</h4>
         <dl>
           <dd>
-          <a href="#team">点快团队</a>
+          <a href="./about.html">关于点快</a>
           </dd>
           <dd>
-          <a href="#joinus">加入我们</a>
+          <a href="http://shixian.com/projects/1998" target="_blank">加入我们</a>
           </dd>
           <dd>
-          <a href="#contact">联系我们</a>
+          <a href="./contact.html">联系我们</a>
           </dd>
         </dl>
         </li>
