--- a/app/homepage/about.html
+++ b/app/homepage/about.html
@@ -37,47 +37,23 @@
       </p>
     </div>
   </div>
-  <div class="menu_links_on">
-    <div class="menu_links">
-      <a href="./register.html">免费版</a><a href="./price.html" class="menu_links_current">付费版</a>
-    </div>
-  </div>
   <div class="content_0_on">
     <div class="content_0">
 
       <div class="part part_0 register-part">
         <h3 class="part_title first_title">
-          仅需每月多留住一个顾客...
+          关于点快
         </h3>
-        <div class="price-table">
-          <table>
-            <tr>
-              <th>免费版</th>
-              <th>付费版</th>
-            </tr>
-            <tr>
-              <td>短信取号 600 次/月</td>
-              <td>短信取号 3000 次/月</td>
-            </tr>
-            <tr>
-              <td>微信取号 1200 次/月</td>
-              <td>微信取号无限次</td>
-            </tr>
-            <tr>
-              <td>在线 / 电话<br>技术支持</td>
-              <td>在线 / 电话 / 服务专员上门<br>技术支持</td>
-            </tr>
-            <tr>
-              <td><span class="price-text">免费</span></td>
-              <td><span class="price-text">99 元/月</span></td>
-            </tr>
-          </table>
-        </div>
-        <div style="text-align:center;margin-top:10px;color:#333;">
-          <span style="color:#f70">付费版</span>开通，请直接联系我们，由专员为您服务
-        </div>
-        <div style="text-align:center;margin-top:10px;color:#333;">
-          QQ：3035731421，电话：13021045329
+        <div style="text-align:left;margin-top:20px;color:#333;">
+          <h4 style="width:800px;margin: 20px auto 0;color:#333;">
+          “点快”餐厅排号产品，隶属于北京邦邦科技有限公司。
+          </h4>
+          <h4 style="width:800px;margin: 20px auto 0;color:#333;">
+          “点快”是为餐厅在需要顾客排队等位时，提供自助取号的解决方案。新颖的取号方式，可以有效减少就餐高峰时的顾客流失，同时提高了迎宾服务员的工作效率。
+          </h4>
+          <h4 style="width:800px;margin: 20px auto 0;color:#333;">
+          “点快”即将提供远程取号、远程预订、自助点菜、自助买单、会员管理等全方位的智能餐厅解决方案。帮助餐厅减少人工成本、缓解服务员的工作压力，同时有效改善顾客的消费体验。
+          </h4>
         </div>
       </div>
 
