--- a/app/homepage/contact.html
+++ b/app/homepage/contact.html
@@ -42,7 +42,7 @@ var _hmt = _hmt || [];
     <div class="content_top">
       <a href="http://www.diankuai.cn/" class="logo">点快</a>
       <p class="menus">
-      <a href="#" class="menu_current">免费开通</a>
+      <a href="./register.html">免费开通</a>
       <a href="http://c.diankuai.cn/" target="_blank">控制台</a>
       <a href="http://www.diankuai.cn/">首页</a>
       </p>
