--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>点快</title>
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+    <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
     <link rel="apple-touch-icon" href="images/apple_touch_icon.png" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.tmp) styles/app.css -->
