--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
     <script src="scripts/controllers/console.report.js"></script>
     <script src="scripts/controllers/console.history.js"></script>
     <script src="scripts/controllers/console.strategy.js"></script>
+    <script src="scripts/controllers/console.menu.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/services/fileupload.js"></script>
     <script src="scripts/services/defaultdata.js"></script>
