--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
     <script src="scripts/controllers/console.menu.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/services/fileupload.js"></script>
+    <script src="scripts/directives/imgkey.js"></script>
     <script src="scripts/services/defaultdata.js"></script>
     <script src="scripts/custom_libs/echarts/echarts-all.js"></script>
     <!-- endbuild -->
