--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
     <script src="scripts/services/fileupload.js"></script>
     <script src="scripts/services/defaultdata.js"></script>
     <script src="scripts/services/ui.js"></script>
+    <script src="scripts/services/fetch.js"></script>
     <script src="scripts/custom_libs/echarts/echarts-all.js"></script>
     <!-- endbuild -->
 
