--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
