add reward exchange page

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
     <script src="scripts/services/ui.js"></script>
     <script src="scripts/services/fetch.js"></script>
     <script src="scripts/custom_libs/echarts/echarts-all.js"></script>
+    <script src="scripts/controllers/console.exchange.js"></script>
     <!-- endbuild -->
 
     <div class="page-loading">
