add basic qrcode page

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
     <script src="scripts/controllers/console.strategy.js"></script>
     <script src="scripts/controllers/console.menu.js"></script>
     <script src="scripts/controllers/console.order.js"></script>
+    <script src="scripts/controllers/console.qrcode.js"></script>
     <script src="scripts/directives/fileupload.js"></script>
     <script src="scripts/directives/imgkey.js"></script>
     <script src="scripts/services/fileupload.js"></script>
